--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
               </p>
               <div class="hero-actions">
                 <!-- TODO: replace # with your top affiliate link -->
-                <a href="#" class="btn-primary">
+                <a href="https://bwredir.com/2Ci9" class="btn-primary">
                   <span>Claim top parlay bonus</span>
                   <span class="btn-primary-icon">↗</span>
                 </a>
