--- a/index.html
+++ b/index.html
@@ -689,17 +689,17 @@
                 <!-- Book 1 -->
                 <article class="book-row">
                   <div class="book-main">
-                    <div class="book-name">EliteParlay Sportsbook</div>
-                    <div class="book-region">Available in multiple regulated markets</div>
+                    <div class="book-name">Stake.com</div>
+                    <div class="book-region">Elite Crypto Sportsbook with High Limits</div>
                   </div>
                   <div>
                     <div class="book-bonus">
-                      Up to $500 in parlay boost credits
-                      <span>on first deposits</span>
+                      Up to $1,000 in reload bonuses
+                      <span>ofor parlay and prop bettors</span>
                     </div>
                   </div>
                   <div class="book-tag">
-                    Best overall for multi-leg boosts
+                    Instant withdrawals
                   </div>
                   <!-- TODO: replace # with affiliate link -->
                   <a href="#" class="book-cta">
