--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
                     Instant withdrawals
                   </div>
                   <!-- TODO: replace # with affiliate link -->
-                  <a href="#" class="book-cta">
+                  <a href="https://stake.com/?c=97fVTzCm" class="book-cta">
                     <span>Get Offer</span> ↗
                   </a>
                 </article>
