--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
                   <div>
                     <div class="book-bonus">
                       Up to $1,000 in reload bonuses
-                      <span>ofor parlay and prop bettors</span>
+                      <span>for parlay and prop bettors</span>
                     </div>
                   </div>
                   <div class="book-tag">
