--- a/index.html
+++ b/index.html
@@ -710,20 +710,20 @@
                 <!-- Book 2 -->
                 <article class="book-row">
                   <div class="book-main">
-                    <div class="book-name">SharpEdge Exchange</div>
-                    <div class="book-region">Exchange-style odds • Advanced users</div>
+                    <div class="book-name">BetWinner</div>
+                    <div class="book-region">Global Sportsbook with Competitive Odds</div>
                   </div>
                   <div>
                     <div class="book-bonus">
-                      Reduced juice on parlay legs
-                      <span>for high-volume bettors</span>
+                      100% first deposit bonus up to $100
+                      <span>available for new bettors</span>
                     </div>
                   </div>
                   <div class="book-tag">
-                    Best for sharp odds
+                    Top Value
                   </div>
                   <!-- TODO: replace # with affiliate link -->
-                  <a href="#" class="book-cta">
+                  <a href="https://bwredir.com/2Ci9" class="book-cta">
                     <span>Join Now</span> ↗
                   </a>
                 </article>
